Fixed hash links and minor layout issues

--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -173,7 +173,7 @@ a {
 }
 
 .highlight {
-    background-color: var(--nist-blue-light);
+    background-color: yellow;
     color: white;
 }
 
